Fix colors in dark mode. Add About page

--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@
 @plugin '@tailwindcss/forms';
 
 body {
-    @apply bg-neutral-50 text-neutral-800 dark:bg-neutral-950 dark:text-neutral-100;
+    @apply bg-neutral-50 text-neutral-800 dark:bg-neutral-950 dark:text-gray-400;
 }
 
 input {
@@ -13,11 +13,23 @@ input {
     @apply px-4 py-2 rounded-md text-center cursor-pointer transition-colors duration-100 ease-in-out;
 }
 .btn-primary {
-    @apply bg-neutral-900 text-gray-200 border border-neutral-900 hover:bg-stone-700 dark:hover:bg-stone-800;
+    @apply bg-neutral-900 border border-neutral-900 hover:bg-gray-700 dark:hover:bg-gray-800;
 }
 .btn-primary:disabled {
-    @apply bg-gray-200 text-gray-400 border border-gray-300;
+    @apply bg-gray-200 text-gray-400 border border-gray-300 cursor-not-allowed dark:bg-neutral-800 dark:border-neutral-700;
 }
 .btn-primary-outline {
-    @apply bg-transparent text-gray-900 border border-gray-900 hover:bg-gray-300 dark:border-neutral-800 dark:text-neutral-100;
+    @apply bg-transparent text-gray-900 border border-gray-900 hover:bg-gray-300 dark:hover:bg-neutral-900 dark:border-neutral-800 dark:text-gray-400;
+}
+.btn-toggle {
+    @apply flex-1 p-1 cursor-pointer;
+}
+.btn-toggle-active {
+    @apply bg-gray-200 dark:bg-neutral-800;
+}
+.btn-toggle-inactive {
+    @apply bg-gray-100 dark:bg-neutral-900;
+}
+.list-item {
+    @apply flex p-2 border-b border-neutral-300 dark:border-neutral-800;
 }
